Commit, iniciando cadastro de usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=oficina
 
-spring.datasource.url=jdbc:postgresql://localhost5432/oficina
+spring.datasource.url=jdbc:postgresql://localhost:5432/oficina
 spring.datasource.username=root
 spring.datasource.password=root1234
 
